# openclaw-unified-plugins

openclaw-beads-unified/: index.ts  openclaw.plugin.json  package.json
openclaw-graphiti-unified/: index.ts  openclaw.plugin.json  package.json
vault-embedder/: .gitignore  README.md  config.dexter.yaml  config.example.yaml  config.steve.yaml  pyproject.toml  requirements.txt
vault-embedder/src/: __init__.py  __main__.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  search.py  walker.py
